GNOME Bugzilla – Bug 601290
Warning from titleless window
Last modified: 2009-11-13 21:04:36 UTC
Starting a title-less application (e.g., the test case from bug 601228 produces) JS ERROR: !!! Exception was: Error: Argument 'text' (type utf8) may not be null JS ERROR: !!! lineNumber = '0' JS ERROR: !!! fileName = 'gjs_throw' JS ERROR: !!! message = 'Argument 'text' (type utf8) may not be null' JS ERROR: !!! stack = 'Error("Argument 'text' (type utf8) may not be null")@:0 ("Argument 'text' (type utf8) may not be null")@gjs_throw:0 @:0 ([object _private_Shell_WindowTracker],[object _private_GLib_ParamSpec])@/home/otaylor/gnome-shell/source/gnome-shell/js/ui/panel.js:156 ([object _private_Shell_WindowTracker],[object _private_GLib_ParamSpec])@/home/otaylor/gnome-shell/install/share/gjs-1.0/lang.js:110 Error("Chained exception")@:0 ("Chained exception")@gjs_throw:0
*** Bug 601292 has been marked as a duplicate of this bug. ***
Created attachment 147686 [details] [review] Deal with title-less windows
Review of attachment 147686 [details] [review]: All systems prepare for launch!
Attachment 147686 [details] pushed as 8334b06 - Deal with title-less windows