Deal with title-less windows

https://bugzilla.gnome.org/show_bug.cgi?id=601290